<resources>
    <string name="app_name">生活百事通</string>
    <string name="tip_type">请选择你感兴趣的类型</string>
    <string name="title_news">新闻头条</string>
    <string name="news_type">全部分类</string>
    <string name="news_top">头条</string>
    <string name="news_shehui">社会</string>
    <string name="news_guonei">国内</string>
    <string name="news_guoji">国际</string>
    <string name="news_yule">娱乐</string>
    <string name="news_tiyu">体育</string>
    <string name="news_junshi">军事</string>
    <string name="news_keji">科技</string>
    <string name="news_caijing">财经</string>
    <string name="news_shishang">时尚</string>
    <string name="title_wechat">微信精选</string>
    <string name="title_weather">天气预报</string>
    <string name="weather_recent">最近天气</string>
    <string name="weather_detail_information">详细信息</string>
    <string name="weather_air">空气质量</string>
    <string name="weather_life">生活指数</string>
    <string name="weather_information">天气</string>
    <string name="weather_temperature">温度</string>
    <string name="weather_humidity">湿度</string>
    <string name="weather_direct">风向</string>
    <string name="weather_power">风力</string>
    <string name="weather_pm25">PM2.5:</string>
    <string name="weather_pm10">PM10:</string>
    <string name="weather_effect">影响</string>
    <string name="weather_cloth">[穿衣指数]</string>
    <string name="weather_cold">[感冒指数]</string>
    <string name="weather_airconditioner">[空调指数]</string>
    <string name="weather_washcars">[洗车指数]</string>
    <string name="weather_sports">[运动指数]</string>
    <string name="weather_ultravioletrays">[紫外线指数]</string>
    <string name="weather_city">请输入城市名称</string>
    <string name="weather_cancle">取消</string>
    <string name="weather_confirm">确认</string>
    <string name="tip_error_input">亲，您输入的城市不存在或者暂不支持！</string>
    <string name="tip_error_net">世界上最遥远的距离就是没网！</string>
    <string name="tip_load">正在加载中，请稍后...</string>
    <string name="title_bus">公交查询</string>
    <string name="bus_busline">查询线路、站点</string>
    <string name="bus_recommend">为您推荐：</string>
    <string name="bus_from_to">→</string>
    <string name="bus_to">--</string>
    <string name="bus_front_and_terminal">始发地：</string>
    <string name="bus_start_and_end">首末班：</string>
    <string name="bus_price">票价：</string>
    <string name="bus_lu">路</string>
    <string name="bus_length">距离：</string>
    <string name="bus_city">城市切换</string>
    <string name="bus_switch">切换</string>
    <string name="bus_city_tip">温馨提示：现已支持各大热门城市和各省的县级城市，今后会陆续开通其他城市，敬请期待...</string>
    <string name="title_explaindream">周公解梦</string>
    <string name="explaindream_huangjin">请输入您的梦</string>
    <string name="explaindream_tip">常见的梦：黄金，美女，蛇，雨，狗</string>
    <string name="title_perpetualclendar">万年历</string>
    <string name="action_settings">Settings</string>
    <string name="title_clendar">中华万年历</string>
    <string name="title_joke">笑话大全</string>
    <string name="title_qqnum">QQ号测吉凶</string>
    <string name="title_huangjin">黄金</string>
    <string name="explaindream_keyword">您梦到的关键字</string>
    <string name="explaindream_recent">最近的五条记录</string>


</resources>
