<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="@dimen/activity_item_height"
        android:layout_height="@dimen/activity_item_height"
        android:background="@drawable/bus_head"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_layout_margieright"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TvItembusName"
            android:text="72"
            android:textSize="@dimen/activity_title" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bus_lu"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_margin="@dimen/activity_layout_margieright">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/TvItembusFront"
               android:text="起始站"
               android:textColor="@color/colorBlack"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/bus_from_to"
               android:textColor="@color/colorPrimaryDark"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/TvItembusTerminal"
               android:text="终点站"
               android:textColor="@color/colorBlack"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/TvItembusType"
               android:textColor="@color/colorWhite"
               android:padding="@dimen/activity_layout_margieright"
               android:layout_marginLeft="@dimen/activity_vertical_margin"
               android:background="@drawable/button_corner2"
               android:text="线路"/>
       </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_layout_margieright">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bus_start_and_end"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/TvItembusStarttime"
                android:text="06:30"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bus_to"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/TvItembusEndtime"
                android:text="21:30"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_layout_margieright">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bus_price"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/TvItembusPrice"
                android:text="1元"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>