<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/holo_orange_light">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="@dimen/activity_layout_margieright">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/IvExplainDreamtypeBack"
            android:src="@drawable/back"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_explaindream"
                android:textColor="@color/colorWhite" />
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--<EditText-->
            <!--android:layout_weight="1"-->
            <!--android:layout_width="0dp"-->
            <!--android:id="@+id/EtExplainDream"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="您梦到的关键字"/>-->
        <AutoCompleteTextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:id="@+id/auto"
            android:layout_height="wrap_content"
            android:hint="@string/explaindream_keyword"
            android:completionHint="@string/explaindream_recent"
            android:completionThreshold="1"
            android:dropDownHeight="wrap_content"/>
        <ImageView
            android:id="@+id/IvExplainDreamSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/search"/>
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/LvExplainDreamList">

    </ListView>

</LinearLayout>