<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bus_back">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="@dimen/activity_layout_margieright">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/IvBuslineBack"
            android:src="@drawable/back"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_bus"
                android:textColor="@color/colorWhite" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/TvBuslineCity"
                android:textColor="@color/colorWhite"
                android:text="【石家庄】"/>
        </LinearLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/IvBuslineAdd"
            android:src="@drawable/add"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/IvBuslineBanner"
        android:background="@drawable/bus_banner"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/LlayBuslineSearch"
        android:padding="@dimen/activity_layout_margieright"
        android:background="@drawable/button_corner3">
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:focusable="true"
            android:focusableInTouchMode="true"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/EtBuslineSearch"
            android:hint="@string/bus_busline"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/IvBuslineSearch"
            android:src="@drawable/search"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TvBuslineRecommend"
        android:text="@string/bus_recommend"
        android:layout_margin="@dimen/activity_layout_margieright"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="@dimen/activity_item_height"
            android:layout_height="@dimen/activity_item_height"
            android:id="@+id/IvBuslineLoad"
            android:layout_centerInParent="true"
            android:background="@drawable/loading"
            android:visibility="gone"/>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/LvBuslineList">
        </ListView>
    </RelativeLayout>
</LinearLayout>